--- a/app/manifest.json
+++ b/app/manifest.json
@@ -68,9 +68,7 @@
         "Storage": {
             "description": "管理应用本地数据"
         },
-        "UI": {
-            "description": "管理系统原生控件"
-        },
+        "UI": {},
         "Uploader": {
             "description": "管理文件上传任务"
         },
@@ -95,7 +93,7 @@
         
         "Speech": {
             "description": "管理语音识别插件"
-        }
+        },"Webview":{},"NativeUI":{},"Navigator":{}
     },
     "plus": {
         "splashscreen": {
