--- a/node/wechat/package.json
+++ b/node/wechat/package.json
@@ -4,8 +4,15 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "koa": "^1.2.4",
+    "bluebird": "^2.11.0",
+    "request": "^2.76.0",
+    "raw-body": "^2.1.7",
+    "xml2js": "^0.4.17",
+    "lodash": "^4.16.4",
     "sha1": "^1.1.1",
-    "koa": "^1.2.4"
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
